@@ -1,6 +1,7 @@
 v1.5.6 (WIP)
 - Draw additional accents when rendering a list divider
 - Update List, Table and TreeView to not handle Tab or Backtab
+- Allow specifying TabbedPanels switcher height
 - When resetting color with "-" tag, set background color to primitive
 background color, rather than the terminal background color
 
